Add REST preset to quick add chords
- Added REST preset to Common Chords section in index.html
- Updated drag and drop handler in script.js to support rest chords
- Added CSS styling for rest presets in styles.css
- Rest preset allows users to easily add silence/pauses to progressions

--- a/index.html
+++ b/index.html
@@ -150,13 +150,25 @@
                         <div class="key white" data-note="G4">G</div>
                         <div class="key white" data-note="A4">A</div>
                         <div class="key white" data-note="B4">B</div>
-                        
+                        <div class="key white" data-note="C5">C</div>
+                        <div class="key white" data-note="D5">D</div>
+                        <div class="key white" data-note="E5">E</div>
+                        <div class="key white" data-note="F5">F</div>
+                        <div class="key white" data-note="G5">G</div>
+                        <div class="key white" data-note="A5">A</div>
+                        <div class="key white" data-note="B5">B</div>
+
                         <!-- Black keys -->
-                        <div class="key black" data-note="C#4" style="left: 35px;">C#</div>
-                        <div class="key black" data-note="D#4" style="left: 85px;">D#</div>
-                        <div class="key black" data-note="F#4" style="left: 185px;">F#</div>
-                        <div class="key black" data-note="G#4" style="left: 235px;">G#</div>
-                        <div class="key black" data-note="A#4" style="left: 285px;">A#</div>
+                        <div class="key black" data-note="C#4">C#</div>
+                        <div class="key black" data-note="D#4">D#</div>
+                        <div class="key black" data-note="F#4">F#</div>
+                        <div class="key black" data-note="G#4">G#</div>
+                        <div class="key black" data-note="A#4">A#</div>
+                        <div class="key black" data-note="C#5">C#</div>
+                        <div class="key black" data-note="D#5">D#</div>
+                        <div class="key black" data-note="F#5">F#</div>
+                        <div class="key black" data-note="G#5">G#</div>
+                        <div class="key black" data-note="A#5">A#</div>
                     </div>
                 </div>
                 <div class="piano-controls">
@@ -213,6 +225,7 @@
                                 <div class="preset-chord" draggable="true" data-chord-name="G" data-chord-notes="G3,B3,D4">G</div>
                                 <div class="preset-chord" draggable="true" data-chord-name="Am" data-chord-notes="A3,C4,E4">Am</div>
                                 <div class="preset-chord" draggable="true" data-chord-name="G7" data-chord-notes="G3,B3,D4,F4">G7</div>
+                                <div class="preset-chord" draggable="true" data-chord-name="-" data-chord-notes="" data-is-rest="true">REST</div>
                             </div>
                         </div>
                         
