feat: Enhanced measure creation and progression management
- Improved createEmptyMeasures() function with proper validation
- Added visual feedback for empty measure creation
- Enhanced measure display with time signature awareness
- Better integration of measure count input with progression controls
- Maintained existing drag-and-drop and editing functionality

--- a/index.html
+++ b/index.html
@@ -114,6 +114,10 @@
                             <span id="progression-duration">0:00</span>
                         </div>
                         <div class="progression-actions">
+                            <div class="measure-setup">
+                                <input type="number" id="measure-count" min="1" max="32" value="4" title="Number of measures">
+                                <button id="create-measures" class="action-btn" title="Create empty measures">📐</button>
+                            </div>
                             <button id="transpose-down" class="action-btn" title="Transpose down">♭</button>
                             <button id="transpose-up" class="action-btn" title="Transpose up">♯</button>
                             <button id="export-progression" class="action-btn" title="Export progression">💾</button>
