Fix deletion functionality and restore slot selection features
- Modified deleteChordAtIndex() to replace chords with empty slots instead of removing them
- Modified deleteMeasure() to clear all slots in measure instead of removing them
- Restored missing slot selection functions: selectSlotForPiano, clearSlotSelection, updateSelectedSlotDisplay
- Restored empty measure creation functionality with createEmptyMeasures()
- Added slot navigation features: selectPreviousEmptySlot, selectNextEmptySlot, gotoSpecificSlot
- Added addRestToTarget() for adding rests to selected slots
- Enhanced visual feedback with selected-for-piano highlighting
- Updated UI text from 'Delete' to 'Clear Slot' throughout interface
- Improved delete button styling and event handling
- Added comprehensive test files for verifying fixes

Fixes preserve chord progression structure while enabling proper slot management and piano input workflow.

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             <div class="modal-actions">
                 <button id="save-chord-edit" class="btn-primary">Save</button>
                 <button id="cancel-chord-edit" class="btn-secondary">Cancel</button>
-                <button id="delete-chord" class="btn-danger">Delete</button>
+                <button id="delete-chord" class="btn-danger">Clear Slot</button>
             </div>
         </div>
     </div>
@@ -187,7 +187,7 @@
         <div class="menu-item" id="context-substitute">🔄 Substitute</div>
         <div class="menu-item" id="context-insert-before">➕ Insert Before</div>
         <div class="menu-item" id="context-insert-after">➕ Insert After</div>
-        <div class="menu-item" id="context-delete">🗑️ Delete</div>
+        <div class="menu-item" id="context-delete">🗑️ Clear Slot</div>
     </div>
 
     <input type="file" id="import-file-input" style="display: none;" accept=".json,.txt">
