Expand measure limit to 500 for classical music support
- Increased measure creation limit from 20 to 500 measures
- Updated HTML input validation with max=500 attribute and improved tooltip
- Added performance warning for progressions over 100 measures
- Enhanced demo.html with dedicated classical music section and best practices
- Added comprehensive test section for large progression validation
- Supports up to 2000+ chord slots for symphony movements and large classical works
- Maintains efficient workflow with auto-advance feature for sequential entry
- Includes navigation features optimized for large-scale musical analysis

This enables serious classical music work while providing guidance for optimal performance with very large progressions.

--- a/demo.html
+++ b/demo.html
@@ -183,6 +183,29 @@
     </div>
     
     <div class="demo-card">
+        <h2>🎼 Working with Large Classical Pieces</h2>
+        <p>The Musical Accompanist Tool now supports up to 500 measures, making it suitable for classical compositions:</p>
+        <h3>Features for Classical Music</h3>
+        <ul>
+            <li><strong>Large Capacity:</strong> Up to 500 measures (2000+ chord slots in 4/4 time)</li>
+            <li><strong>Sequential Entry:</strong> Auto-advance feature for efficient chord input</li>
+            <li><strong>Navigation:</strong> Jump to specific measures and beats quickly</li>
+            <li><strong>Structured Editing:</strong> Work with complete musical forms</li>
+        </ul>
+        <h3>Best Practices for Large Works</h3>
+        <ul>
+            <li><strong>Work in Sections:</strong> Consider creating movements or sections separately</li>
+            <li><strong>Save Frequently:</strong> Use export feature to save your progress</li>
+            <li><strong>Use Auto-Advance:</strong> Click first empty slot, then use "Add to Slot" repeatedly</li>
+            <li><strong>Navigate Efficiently:</strong> Use measure/beat navigation for quick jumps</li>
+        </ul>
+        <h3>Example Classical Usage</h3>
+        <p><code>200 measures</code> - Symphony movement analysis</p>
+        <p><code>100 measures</code> - Sonata form exposition</p>
+        <p><code>50 measures</code> - Theme and variations</p>
+    </div>
+    
+    <div class="demo-card">
         <h2>🔧 Technical Features</h2>
         <ul>
             <li><strong>Web Audio API:</strong> High-quality audio synthesis</li>
