--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                         </div>
                         <div class="progression-actions">
                             <div class="measure-setup">
-                                <input type="number" id="measure-count" min="1" value="4" title="Number of measures">
+                                <input type="number" id="measure-count" min="1" max="500" value="4" title="Number of measures (1-500)">
                                 <button id="create-measures" class="action-btn" title="Create empty measures">📐</button>
                             </div>
                             <button id="transpose-down" class="action-btn" title="Transpose down">♭</button>
