Add metronome toggle with accented downbeats

--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
                             <input type="checkbox" id="loop" checked> Loop Mode
                         </label>
                     </div>
+                    <div class="control-group">
+                        <label><input type="checkbox" id="metronome-toggle" checked> Metronome Click</label>
+                    </div>
                 </div>
             </section>
 
