Add PR #5: Key signature and Roman numeral support
- Added key signature controls (tonic and mode) to HTML
- Added key signature properties and note mapping utilities
- Added event listeners for key signature changes
- Implemented parseRomanNumeralChord method for Roman numeral analysis
- Supports I, ii, iii, IV, V, vi, vii° notation with 7th chords
- Roman numerals adapt to current key signature (major/minor)
- Displays Roman numerals while playing actual chord tones

--- a/index.html
+++ b/index.html
@@ -50,6 +50,30 @@
                             <input type="checkbox" id="loop" checked> Loop Mode
                         </label>
                     </div>
+                    <div class="control-group">
+                        <label><input type="checkbox" id="metronome-toggle" checked> Metronome Click</label>
+                    </div>
+                    <div class="control-group">
+                        <label>Key Signature:</label>
+                        <select id="key-tonic">
+                            <option value="C">C</option>
+                            <option value="C#">C♯/D♭</option>
+                            <option value="D">D</option>
+                            <option value="D#">D♯/E♭</option>
+                            <option value="E">E</option>
+                            <option value="F">F</option>
+                            <option value="F#">F♯/G♭</option>
+                            <option value="G">G</option>
+                            <option value="G#">G♯/A♭</option>
+                            <option value="A">A</option>
+                            <option value="A#">A♯/B♭</option>
+                            <option value="B">B</option>
+                        </select>
+                        <select id="key-mode">
+                            <option value="major" selected>Major</option>
+                            <option value="minor">Minor</option>
+                        </select>
+                    </div>
                 </div>
             </section>
 
