Remove Musical Repeats functionality and fix key signature Roman numeral chords
- Removed all Musical Repeats navigation markers (DS, DC, Segno, Coda, etc.)
- Removed updateRepeatMarkers() and resetNavigationState() functions
- Removed Musical Repeats UI section from HTML
- Fixed AudioContext initialization to resolve browser warnings
- Replaced deprecated Tone.Transport.schedule() with scheduleRepeat()
- Implemented proper key signature support for Roman numeral chords
- Updated getRomanNumeralChord() to calculate chords based on current key
- Enhanced updateRomanNumeralButtons() to show proper major/minor Roman numerals
- Fixed event handler formatting for key signature changes
- Roman numeral chords now properly transpose when key signature changes

--- a/index.html
+++ b/index.html
@@ -77,6 +77,25 @@
                 </div>
             </section>
 
+            <!-- Roman Numeral Chord Selection -->
+            <section class="roman-numeral-section">
+                <h2>🎼 Roman Numeral Chords</h2>
+                <div class="roman-numeral-controls">
+                    <div class="roman-numeral-buttons">
+                        <button class="roman-chord-btn" data-roman="I">I</button>
+                        <button class="roman-chord-btn" data-roman="ii">ii</button>
+                        <button class="roman-chord-btn" data-roman="iii">iii</button>
+                        <button class="roman-chord-btn" data-roman="IV">IV</button>
+                        <button class="roman-chord-btn" data-roman="V">V</button>
+                        <button class="roman-chord-btn" data-roman="vi">vi</button>
+                        <button class="roman-chord-btn" data-roman="vii°">vii°</button>
+                    </div>
+                    <div class="roman-chord-info">
+                        <span id="roman-chord-display">Select a chord to see its notes</span>
+                    </div>
+                </div>
+            </section>
+
             <!-- Piano Keyboard -->
             <section class="piano-section">
                 <h2>🎹 Piano Keyboard - Click to Build Chords</h2>
