--- a/index.html
+++ b/index.html
@@ -81,15 +81,111 @@
             <section class="roman-numeral-section">
                 <h2>🎼 Roman Numeral Chords</h2>
                 <div class="roman-numeral-controls">
-                    <div class="roman-numeral-buttons">
-                        <button class="roman-chord-btn" data-roman="I">I</button>
-                        <button class="roman-chord-btn" data-roman="ii">ii</button>
-                        <button class="roman-chord-btn" data-roman="iii">iii</button>
-                        <button class="roman-chord-btn" data-roman="IV">IV</button>
-                        <button class="roman-chord-btn" data-roman="V">V</button>
-                        <button class="roman-chord-btn" data-roman="vi">vi</button>
-                        <button class="roman-chord-btn" data-roman="vii°">vii°</button>
+                    <!-- Chord Type Tabs -->
+                    <div class="chord-type-tabs">
+                        <button class="chord-tab active" data-type="triads">Triads</button>
+                        <button class="chord-tab" data-type="sevenths">7th Chords</button>
+                        <button class="chord-tab" data-type="secondary">Secondary</button>
+                        <button class="chord-tab" data-type="advanced">Advanced</button>
                     </div>
+
+                    <!-- Triads Tab -->
+                    <div class="chord-group active" data-group="triads">
+                        <div class="chord-category">
+                            <span class="category-label">Basic Triads</span>
+                            <div class="roman-numeral-buttons">
+                                <button class="roman-chord-btn" data-roman="I" title="Tonic major triad">I</button>
+                                <button class="roman-chord-btn" data-roman="ii" title="Supertonic minor triad">ii</button>
+                                <button class="roman-chord-btn" data-roman="iii" title="Mediant minor triad">iii</button>
+                                <button class="roman-chord-btn" data-roman="IV" title="Subdominant major triad">IV</button>
+                                <button class="roman-chord-btn" data-roman="V" title="Dominant major triad">V</button>
+                                <button class="roman-chord-btn" data-roman="vi" title="Submediant minor triad">vi</button>
+                                <button class="roman-chord-btn" data-roman="vii°" title="Leading tone diminished triad">vii°</button>
+                            </div>
+                        </div>
+                        <div class="chord-category">
+                            <span class="category-label">Suspended</span>
+                            <div class="roman-numeral-buttons">
+                                <button class="roman-chord-btn" data-roman="Isus4" title="Tonic suspended 4th">Isus4</button>
+                                <button class="roman-chord-btn" data-roman="Vsus4" title="Dominant suspended 4th">Vsus4</button>
+                                <button class="roman-chord-btn" data-roman="IVsus2" title="Subdominant suspended 2nd">IVsus2</button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- 7th Chords Tab -->
+                    <div class="chord-group" data-group="sevenths">
+                        <div class="chord-category">
+                            <span class="category-label">Major 7th Chords</span>
+                            <div class="roman-numeral-buttons">
+                                <button class="roman-chord-btn" data-roman="Imaj7" title="Tonic major 7th">Imaj7</button>
+                                <button class="roman-chord-btn" data-roman="IVmaj7" title="Subdominant major 7th">IVmaj7</button>
+                            </div>
+                        </div>
+                        <div class="chord-category">
+                            <span class="category-label">Minor 7th Chords</span>
+                            <div class="roman-numeral-buttons">
+                                <button class="roman-chord-btn" data-roman="iim7" title="Supertonic minor 7th">iim7</button>
+                                <button class="roman-chord-btn" data-roman="iiim7" title="Mediant minor 7th">iiim7</button>
+                                <button class="roman-chord-btn" data-roman="vim7" title="Submediant minor 7th">vim7</button>
+                            </div>
+                        </div>
+                        <div class="chord-category">
+                            <span class="category-label">Dominant 7th</span>
+                            <div class="roman-numeral-buttons">
+                                <button class="roman-chord-btn" data-roman="V7" title="Dominant 7th chord">V7</button>
+                                <button class="roman-chord-btn" data-roman="VII7" title="Leading tone 7th">VII7</button>
+                            </div>
+                        </div>
+                        <div class="chord-category">
+                            <span class="category-label">Half-Diminished</span>
+                            <div class="roman-numeral-buttons">
+                                <button class="roman-chord-btn" data-roman="viim7b5" title="Leading tone half-diminished">viim7b5</button>
+                                <button class="roman-chord-btn" data-roman="iim7b5" title="Supertonic half-diminished">iim7b5</button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Secondary Dominants Tab -->
+                    <div class="chord-group" data-group="secondary">
+                        <div class="chord-category">
+                            <span class="category-label">Secondary Dominants</span>
+                            <div class="roman-numeral-buttons">
+                                <button class="roman-chord-btn" data-roman="V7/V" title="Dominant of the dominant">V7/V</button>
+                                <button class="roman-chord-btn" data-roman="V7/vi" title="Dominant of vi">V7/vi</button>
+                                <button class="roman-chord-btn" data-roman="V7/IV" title="Dominant of IV">V7/IV</button>
+                                <button class="roman-chord-btn" data-roman="V7/ii" title="Dominant of ii">V7/ii</button>
+                                <button class="roman-chord-btn" data-roman="V7/iii" title="Dominant of iii">V7/iii</button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Advanced Chords Tab -->
+                    <div class="chord-group" data-group="advanced">
+                        <div class="chord-category">
+                            <span class="category-label">Fully Diminished</span>
+                            <div class="roman-numeral-buttons">
+                                <button class="roman-chord-btn" data-roman="viio7" title="Leading tone fully diminished 7th">viio7</button>
+                                <button class="roman-chord-btn" data-roman="iio7" title="Supertonic fully diminished 7th">iio7</button>
+                            </div>
+                        </div>
+                        <div class="chord-category">
+                            <span class="category-label">Augmented</span>
+                            <div class="roman-numeral-buttons">
+                                <button class="roman-chord-btn" data-roman="III+" title="Mediant augmented triad">III+</button>
+                                <button class="roman-chord-btn" data-roman="V+" title="Dominant augmented triad">V+</button>
+                            </div>
+                        </div>
+                        <div class="chord-category">
+                            <span class="category-label">Borrowed Chords</span>
+                            <div class="roman-numeral-buttons">
+                                <button class="roman-chord-btn" data-roman="bVII" title="Flat VII (borrowed from minor)">♭VII</button>
+                                <button class="roman-chord-btn" data-roman="bVI" title="Flat VI (borrowed from minor)">♭VI</button>
+                                <button class="roman-chord-btn" data-roman="bII" title="Neapolitan chord">♭II</button>
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="roman-chord-info">
                         <span id="roman-chord-display">Select a chord to see its notes</span>
                     </div>
