--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
                         <label>Key Signature:</label>
                         <select id="key-tonic">
                             <option value="Cb">C♭</option>
-                            <option value="C">C</option>
+                            <option value="C" selected>C</option>
                             <option value="C#">C♯</option>
                             <option value="Db">D♭</option>
                             <option value="D">D</option>
