Add Vercel Analytics tracking to main HTML files
- Install @vercel/analytics package
- Add analytics script to index.html, demo.html, and public/index.html
- Setup web analytics tracking for vanilla JavaScript project
- Enable visitor and page view tracking for Vercel deployment

--- a/demo.html
+++ b/demo.html
@@ -231,5 +231,10 @@
     <div style="text-align: center; margin: 40px 0;">
         <a href="index.html" class="launch-button">🚀 Launch Musical Accompanist Tool</a>
     </div>
+    
+    <script type="module">
+        import { inject } from '@vercel/analytics';
+        inject();
+    </script>
 </body>
 </html>
