--- a/index.html
+++ b/index.html
@@ -378,6 +378,10 @@
         </div>
     </div>
 
+    <script type="module">
+        import { inject } from '@vercel/analytics';
+        inject();
+    </script>
     <script src="script.js"></script>
 </body>
 </html>
